--- a/add_new_project.html
+++ b/add_new_project.html
@@ -345,33 +345,26 @@
                                                 </select>
                                             </div>
                                         </div>
+                                        <div class="col-12">
+                                            <button class="btn btn btn-info btn-base float-right">
+                                                <i class="fa fa-save">
+                                                </i>
+                                                Submit
+                                            </button>
 
-                                        <div class="col-md-4 col-sm-6">
-                                            <div class="form-group">
-                                                <label>Toatal Requisition</label>
-                                                <input class="form-control" id="PB" name="budget" required="" type="number" step="0.01" placeholder="Toatal Requisition">
-                                            </div>
                                         </div>
-                                        <div class="col-md-4 col-sm-6">
-                                            <div class="form-group">
-                                                <label>Average Requisition</label>
-                                                <input class="form-control" id="PB" name="budget" required="" type="number" step="0.01" placeholder="Average Requisition">
-                                            </div>
-                                        </div>
-
-
 
 
                                     </div>
-                                    <div class="row">
-
-                                        <div class="col-12">
+                                    <!-- <div class="row">
+                                        <div class="col-4">
                                             <button class="btn btn btn-info btn-base float-right>
                                             <i class=" fa fa-save ">
                                                     </i> Submit
                                             </button>
                                         </div>
-                                    </div>
+
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
