--- a/add_new_site.html
+++ b/add_new_site.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        Add new Project
+        Add new Site
     </title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7a1c11509a.js" crossorigin="anonymous">
@@ -307,11 +307,11 @@
                                                 <label for="amount">
                                                     Site Description:
                                                 </label>
-                                                <textarea class="form-control">
+                                                <textarea class="form-control" rows="3">
                                                 </textarea>
                                             </div>
                                         </div>
-                                        <div class="col-md-4 col-sm-6">
+                                        <!-- <div class="col-md-4 col-sm-6">
                                             <div class="form-group">
                                                 <label>Total Requisition</label>
                                                 <input class="form-control" id="PB" name="budget" required="" type="number" step="0.01" placeholder="Total Requisition">
@@ -322,10 +322,10 @@
                                                 <label> Requisition count</label>
                                                 <input class="form-control" id="PB" name="budget" required="" type="number" step="0.01" placeholder="Requisition count">
                                             </div>
-                                        </div>
+                                        </div> -->
 
                                         <div class="col-12">
-                                            <button class="btn btn-sm btn-info btn-base float-right">
+                                            <button class="btn btn btn-info btn-base float-right">
                                                 <i class="fa fa-save">
                                                 </i>
                                                 Submit
