--- a/department_management.html
+++ b/department_management.html
@@ -93,7 +93,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <i class="fas fa-bell" data-toggle="modal" data-target="#myModal" style="color: red; font-size: 20px;"></i>
+                                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal" style=""></i>
                                 </a>
 
                                 <div class="modal" id="myModal">
@@ -209,7 +209,7 @@
                                                         </div>
                                                         <div class="col-md-2">
                                                             <div class="form-group">
-                                                                <label for=" exampleFormControlSelect1"></label>
+                                                                <label for=" exampleFormControlSelect1"> &nbsp;</label>
                                                                 <br>
 
                                                                 <button type="submit" class="btn btn-block btn-info btn-base float-right ">
@@ -249,7 +249,7 @@
                                             <tr>
                                                 <th>Department Name</th>
                                                 <th>Status</th>
-                                                <th>Action</th>
+                                                <th width="90px">Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
