--- a/edit_requisition.html
+++ b/edit_requisition.html
@@ -21,7 +21,7 @@
         <ul>
             <li class="nav-item">
                 <a class="nav-link" href="#">
-                    <i class="fas fa-bell" data-toggle="modal" data-target="#myModal" style="color: aliceblue; font-size: 20px; margin-top: 10px"></i>
+                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal" style="color: aliceblue; font-size: 20px; margin-top: 10px"></i>
                 </a>
 
                 <div class="modal" id="myModal">
