--- a/requisitions_item_management.html
+++ b/requisitions_item_management.html
@@ -93,7 +93,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <i class="fas fa-bell" data-toggle="modal" data-target="#myModal" style="color: red; font-size: 20px;"></i>
+                                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal" style=""></i>
                                 </a>
 
                                 <div class="modal" id="myModal">
@@ -208,8 +208,8 @@
 
                                                         </div>
                                                         <div class="form-group col-md-2">
-                                                            <label for=" exampleFormControlSelect1"></label>
-                                                            <br>
+                                                            <label for=" exampleFormControlSelect1">&nbsp;</label>
+
                                                             <button type="submit" class="btn btn-block btn-info btn-base float-right ">
                                                                 Submit
                                                             </button>
