--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <i class="fas fa-bell" data-toggle="modal" data-target="#myModal"
-                                       style="color: red; font-size: 20px;"></i>
+                                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal"
+                                       style=""></i>
                                 </a>
 
                                 <div class="modal" id="myModal">
@@ -129,7 +129,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
                                     <i class="fas fa-sign-in-alt" data-toggle="modal" data-target="#loginPageModal"
-                                       style="color: red; font-size: 20px;"></i>
+                                       style=""></i>
                                 </a>
 
                                 <div id="loginPageModal" class="modal fade">
