--- a/project_management.html
+++ b/project_management.html
@@ -95,7 +95,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <i class="fas fa-bell" data-toggle="modal" data-target="#myModal" style="color: red; font-size: 20px;"></i>
+                                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal" style=""></i>
                                 </a>
 
                                 <div class="modal" id="myModal">
