--- a/unit_management.html
+++ b/unit_management.html
@@ -93,7 +93,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <i class="fas fa-bell" data-toggle="modal" data-target="#myModal" style="color: red; font-size: 20px;"></i>
+                                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal" style=""></i>
                                 </a>
 
                                 <div class="modal" id="myModal">
@@ -210,8 +210,8 @@
 
                                                         <div class="col-md-2">
                                                             <div class="form-group">
-                                                                <br>
-                                                                <label for="exampleFormControlSelect1"></label>
+
+                                                                <label for="exampleFormControlSelect1"> &nbsp; </label>
                                                                 <button type="submit" class="btn btn-block btn-info btn-base float-right">
                                                                     Submit
                                                                 </button>
