marge done between sayket and maruf

--- a/login_form.html
+++ b/login_form.html
@@ -33,25 +33,15 @@
             <input type="password" placeholder="Enter Password" name="psw" required>
 
             <button class="login" type="submit">Login</button>
-<!--            <label>-->
-<!--                <input type="checkbox" checked="checked" name="remember"> Remember me-->
-<!--            </label>-->
+            <span class="psw"> <a href="index.html" style="color: #8bc34a">Forgot password?</a></span>
         </div>
 
-        <div class="container" style="background-color:#f1f1f1">
-
-            <a href="index.html">
-                       <button type="button" class="cancelbtn">Cancel</button>
-                    </a>
-            <span class="psw"> <a href="#">Forgot password?</a></span>
+        <div class="container">
+<!--            <a href="index.html"> <button type="button" class="cancelbtn">Cancel</button></a>-->
+<!--            <span class="psw"> <a href="#">Forgot password?</a></span>-->
         </div>
     </form>
     </div>
-
-
-    <div class="repeater-form">
-    </div>
-
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
