--- a/client management.html
+++ b/client management.html
@@ -16,9 +16,6 @@
 <body>
 
 
-
-
-
     <div class="wrapper">
         <!-- Sidebar  -->
         <nav id="sidebar">
@@ -54,7 +51,7 @@
                 </li>
 
 
-                <li class="active">
+                <li>
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Site
                         Management</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
@@ -93,7 +90,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <i class="fas fa-bell" data-toggle="modal" data-target="#myModal" style="color: red; font-size: 20px;"></i>
+                                    <i class="fa fa-bell-o" data-toggle="modal" data-target="#myModal" style=""></i>
                                 </a>
 
                                 <div class="modal" id="myModal">
@@ -114,10 +111,11 @@
                                     <img class="profile-logo" src="https://mdbootstrap.com/img/Photos/Avatars/img%20%281%29.jpg">
                                 </a>
                             </li>
-
-                            <!--                            <li class="nav-item">-->
-                            <!--                                <a class="nav-link" href="#">Page</a>-->
-                            <!--                            </li>-->
+                            <li class="nav-item">
+                            <a class="nav-link" href="login_form.html">
+                                <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
+                            </a>
+                        </li>
                         </ul>
                     </div>
                 </div>
