--- a/index.html
+++ b/index.html
@@ -30,102 +30,112 @@
 </head>
 
 <body>
-  
+
 <div class="wrapper">
     <!-- Sidebar  -->
-    <nav id="sidebar">
-        <div class="sidebar-header">
-            <h3><a style="text-decoration: none; color: #fafafa" href="index.html"> RMS </a></h3>
-        </div>
+     <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3><a href="index.html" style="color: white"> RMS </a></h3>
+            </div>
 
-        <ul class="list-unstyled components">
-            <li>
-                <a href="client management.html" style="text-decoration: none;"> Client Management </a>
-            </li>
-            <li>
-                <a href="department_management.html" style="text-decoration: none;"> Department Management </a>
-            </li>
-            <li>
-                <a href="team_management.html" style="text-decoration: none;"> Team Management </a>
-            </li>
-            <li>
-                <a href="unit_management.html" style="text-decoration: none;"> Unit Management </a>
-            </li>
-            <li>
-                <a href="requisitions_item_management.html" style="text-decoration: none;"> Requisitions Item
-                    Management </a>
-            </li>
-            <li>
-                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"> Project
-                    Management</a>
-                <ul class="collapse list-unstyled" id="pageSubmenu">
-                    <li><a href="add_new_project.html" style="text-decoration: none;">Add New Project </a></li>
-                    <li><a href="project_management.html" style="text-decoration: none;"> View All Projects</a></li>
-                </ul>
-            </li>
+            <ul class="list-unstyled components">
+
+                <li>
+                    <a href="client management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Client Management </a>
+                </li>
+                <li>
+                    <a href="department_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Department Management </a>
+                </li>
+                <li>
+                    <a href="team_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Team Management </a>
+                </li>
+                <li>
+                    <a href="unit_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Unit Management </a>
+                </li>
+                <li>
+                    <a href="requisitions_item_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Requisitions Item
+                        Management </a>
+                </li>
+                <li>
+                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Project
+                        Management</a>
+                    <ul class="collapse list-unstyled" id="pageSubmenu">
+                        <li><a href="add_new_project.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Add New Project </a></li>
+                        <li><a href="project_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> View All Projects</a></li>
+                    </ul>
+                </li>
 
 
-            <li>
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Site
-                    Management</a>
-                <ul class="collapse list-unstyled" id="homeSubmenu">
-                    <li><a href="add_new_site.html" style="text-decoration: none;">Add New Site</a></li>
-                    <li><a href="site_management.html" style="text-decoration: none;"> View All Sites</a></li>
-                </ul>
-            </li>
+                <li>
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Site
+                        Management</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenu">
+                        <li><a href="add_new_site.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Add New Site</a></li>
+                        <li><a href="site_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> View All Sites</a></li>
+                    </ul>
+                </li>
 
-            <li>
-                <a href="#homeSubmenuRequisition" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Requisition
-                    Management</a>
-                <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
-                    <li><a href="add_new_requisition.html" style="text-decoration: none;">Add New Requisition</a></li>
-                    <li><a href="site_management.html" style="text-decoration: none;"> View All Requisition</a></li>
-                </ul>
-            </li>
-
-        </ul>
-    </nav>
+                <li>
+                    <a href="#homeSubmenuRequisition" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Requisition Management</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
+                        <li><a href="add_new_requisition.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Add New Requisition</a></li>
+                        <li><a href="site_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> View All Requisition</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
 
 
     <!-- Page Content  -->
     <div id="content">
 
         <!--Navbar Start-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background: white">
+                <div class="container-fluid">
 
-                <button type="button" id="sidebarCollapse" class="btn btn-info">
-                    <i class="fas fa-align-left"></i>
-                    <!--                        <span>Toggle Sidebar</span>-->
-                </button>
-                <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-align-justify"></i>
-                </button>
+                    <button type="button" id="sidebarCollapse" class="btn btn-default">
+                        <i class="fas fa-bars"></i>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav ml-auto">
+                    </button>
+                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-align-justify"></i>
+                    </button>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="fas fa-bell" data-toggle="modal" data-target="#myModal"
-                                   style="color: red; font-size: 20px;"></i>
-                            </a>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav ml-auto">
 
-                            <div class="modal" id="myModal">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5>Notifications</h5>
-                                            <button class="close" data-dismiss="modal">&times;</button>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
+                                    <i class="fa fa-bell" data-toggle="modal" data-target="#myModal" style=""></i>
+                                </a>
+
+                                <div class="modal" id="myModal">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5>Notifications</h5>
+                                                <button class="close" data-dismiss="modal">&times;</button>
+                                            </div>
+
                                         </div>
-
                                     </div>
                                 </div>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="" data-toggle="modal" data-target="#modalLoginAvatar">
+                                    <img class="profile-logo" src="https://mdbootstrap.com/img/Photos/Avatars/img%20%281%29.jpg">
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" href="login_form.html">
+                                <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
+                            </a>
+                        </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
         <!--Navbar End-->
 
         <!--Profile Modal Start-->
@@ -170,7 +180,7 @@
         </div>
         <!--End Modal: Login with Avatar Form-->
 
-
+        <div class="text-content" style="padding: 20px">
         <h2>Requisition Management System</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -193,6 +203,7 @@
             anim id est laborum.</p>
 
         <div class="line"></div>
+            </div>
 
     </div>
 </div>
