--- a/team_management.html
+++ b/team_management.html
@@ -16,10 +16,6 @@
 
 <body>
 
-
-
-
-
     <div class="wrapper">
         <!-- Sidebar  -->
         <nav id="sidebar">
@@ -55,7 +51,7 @@
                 </li>
 
 
-                <li class="active">
+                <li>
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Site
                         Management</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
@@ -115,10 +111,11 @@
                                     <img class="profile-logo" src="https://mdbootstrap.com/img/Photos/Avatars/img%20%281%29.jpg">
                                 </a>
                             </li>
-
-                            <!--                            <li class="nav-item">-->
-                            <!--                                <a class="nav-link" href="#">Page</a>-->
-                            <!--                            </li>-->
+                            <li class="nav-item">
+                            <a class="nav-link" href="login_form.html">
+                                <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
+                            </a>
+                        </li>
                         </ul>
                     </div>
                 </div>
