grand total added

--- a/add_new_requisition.html
+++ b/add_new_requisition.html
@@ -398,17 +398,15 @@
                                                             <input class="form-control" type="text" placeholder="Remarks"></div>
                                                         <!-- <textarea class="form-control " rows="2" placeholder="Remarks"></textarea> -->
                                                     </div>
-                                                    <!-- <div class="col-md-8">
-                                                        <div class="form-group float-right">
-
-                                                            <h4>Grand Total</h4>
-
+                                                    <div class="col-md-8">
+                                                        <div class="float-right text-muted" style="margin-top: 5px;">
+                                                            <h5>Grand Total</h5>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-2">
                                                         <div class="form-group">
                                                             <input class="form-control" type="text" placeholder="Grand Total" disabled></div>
-                                                    </div> -->
+                                                    </div>
 
                                                 </div>
                                             </div>
@@ -583,6 +581,14 @@
                     '                                               <div class="form-group">\n' +
                     '                                                   <input class="form-control" type="text[]" placeholder="Remarks"></div>\n' +
                     '                                           </div>\n' +
+                    '                                           <div class="col-md-8">\n' +
+                    '                                               <div class="float-right text-muted" style="margin-top: 5px;">\n' +
+                    '                                                   <h5>Grand Total</h5></div>\n' +
+                    '                                           </div>\n' +
+                    '                                           <div class="col-md-2">\n' +
+                    '                                               <div class="form-group">\n' +
+                    '                                                   <input class="form-control" type="text" placeholder="Grand Total" disabled></div>\n' +
+                    '                                           </div>\n' +
                     '\n' +
                     '                                       </div>\n' +
                     '                                   </div>\n' +
@@ -597,6 +603,9 @@
 
         });
     </script>
+</body>
+
+</html>cript>
 </body>
 
 </html>
