--- a/add_new_requisition.html
+++ b/add_new_requisition.html
@@ -68,8 +68,8 @@
                 </li>
                 <li>
                     <a href="#homeSubmenuRequisition" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Requisition Management</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
-                        <li>
+                    <ul class="show list-unstyled" id="homeSubmenuRequisition">
+                        <li class="active">
                             <a href="add_new_requisition.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Add New Requisition</a>
                         </li>
                         <li>
@@ -118,9 +118,11 @@
                                     <img class="profile-logo" src="https://mdbootstrap.com/img/Photos/Avatars/img%20%281%29.jpg">
                                 </a>
                             </li>
-                            <!-- <li class="nav-item">-->
-                            <!-- <a class="nav-link" href="#">Page</a>-->
-                            <!-- </li>-->
+                            <li class="nav-item">
+                                <a class="nav-link" href="login_form.html">
+                                    <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -411,6 +413,8 @@
                                             <hr>
                                         </div>
                                         <div class="col-md-8">
+                                            <a href="#" id="addNewForm" class="btn btn-sm btn-info btn-base float-left fl3 mt10"><i
+                                                class="fa fa-plus-square-o"></i> &nbsp; ADD NEW</a>
 
                                             <div class="float-right text-muted mt-2">
                                                 <h5>Grand Total</h5>
@@ -426,10 +430,9 @@
                                     <div>
 
                                         <div class="col-md-12 ">
-                                            <a href="#" id="addNewForm" class="btn btn-sm btn-info btn-base float-left fl3 mt15"><i
-                                                    class="fa fa-plus-square-o"></i> &nbsp; ADD NEW</a>
 
-                                            <button class="btn btn-sm btn-info btn-base float-right mt15 fr3">Submit</button>
+
+                                            <button class="btn btn btn-info btn-base float-right mt15 fr3">Submit</button>
 
                                         </div>
 
