--- a/add_new_site.html
+++ b/add_new_site.html
@@ -57,8 +57,8 @@
                 <li>
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Site
 						Management</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li>
+                    <ul class="show list-unstyled" id="homeSubmenu">
+                        <li class="active">
                             <a href="add_new_site.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Add New Site</a>
                         </li>
                         <li>
@@ -118,9 +118,11 @@
                                     <img class="profile-logo" src="https://mdbootstrap.com/img/Photos/Avatars/img%20%281%29.jpg">
                                 </a>
                             </li>
-                            <!-- <li class="nav-item">-->
-                            <!-- <a class="nav-link" href="#">Page</a>-->
-                            <!-- </li>-->
+                            <li class="nav-item">
+                                <a class="nav-link" href="login_form.html">
+                                    <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
