--- a/client management.html
+++ b/client management.html
@@ -25,7 +25,7 @@
 
             <ul class="list-unstyled components">
 
-                <li>
+                <li class="active">
                     <a href="client management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Client Management </a>
                 </li>
                 <li>
@@ -112,10 +112,10 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="login_form.html">
-                                <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
-                            </a>
-                        </li>
+                                <a class="nav-link" href="login_form.html">
+                                    <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -172,10 +172,12 @@
                                     <div class="card table-card">
                                         <div class="card-header" id="headingOne">
                                             <h2 class="mb-0">
-                                                <h3 class="float-left"><i class="fa fa-info-circle"></i>Client management</h3>
-                                                <button type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="btn btn-sm btn-info btn-base float-right"><i class="fa fa-plus-square-o"></i>&nbsp;
-                                                    Add New
-                                                </button>
+                                                <h3 class="float-left"><i id="addIcon" class="fa fa-chevron-circle-down" style="font:15px;"></i> Client management
+                                                </h3>
+                                                <button type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="btn btn-sm btn-info btn-base float-right" onclick="change('addIcon')">
+                                                <i class="fa fa-plus-square-o"></i>&nbsp;
+                                                Add New
+                                            </button>
                                             </h2>
                                         </div>
 
@@ -1006,6 +1008,16 @@
         $(document).ready(function() {
             $('#example').DataTable();
         });
+    </script>
+
+    <script>
+        function change(iconID) {
+            if (document.getElementById(iconID).className == "fa fa-chevron-circle-up") {
+                document.getElementById(iconID).className = "fa fa-chevron-circle-down";
+            } else {
+                document.getElementById(iconID).className = "fa fa-chevron-circle-up";
+            }
+        }
     </script>
 </body>
 
