--- a/project_management.html
+++ b/project_management.html
@@ -45,16 +45,16 @@
                 <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Project
 						Management</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
+                    <ul class="show list-unstyled" id="pageSubmenu">
                         <li>
                             <a href="add_new_project.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Add New Project </a>
                         </li>
-                        <li>
+                        <li class="active">
                             <a href="project_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> View All Projects</a>
                         </li>
                     </ul>
                 </li>
-                <li >
+                <li>
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Site
 						Management</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
@@ -120,10 +120,10 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="login_form.html">
-                                <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
-                            </a>
-                        </li>
+                                <a class="nav-link" href="login_form.html">
+                                    <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
