--- a/requisition_management.html
+++ b/requisition_management.html
@@ -68,11 +68,11 @@
                 </li>
                 <li>
                     <a href="#homeSubmenuRequisition" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Requisition Management</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
+                    <ul class="show list-unstyled" id="homeSubmenuRequisition">
                         <li>
                             <a href="add_new_requisition.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Add New Requisition</a>
                         </li>
-                        <li>
+                        <li class="active">
                             <a href="site_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> View All Requisition</a>
                         </li>
                     </ul>
