--- a/requisitions_item_management.html
+++ b/requisitions_item_management.html
@@ -41,7 +41,7 @@
                     <a href="unit_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Unit
                     Management </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="requisitions_item_management.html" style="text-decoration: none;"><i
                         class="fa fa-angle-right"></i> Requisitions Item
                     Management </a>
@@ -125,10 +125,10 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="login_form.html">
-                                <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
-                            </a>
-                        </li>
+                                <a class="nav-link" href="login_form.html">
+                                    <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -186,10 +186,10 @@
                                     <div class="card table-card">
                                         <div class="card-header" id="headingOne">
                                             <h2 class="mb-0">
-                                                <h3 class="float-left"><i class="fa fa-info-circle"></i>Requisition item management
+                                                <h3 class="float-left"><i id="addIcon" class="fa fa-chevron-circle-down" style="font:15px;"></i> Requisition Item Management
                                                 </h3>
-                                                <button type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="btn btn-sm btn-info btn-base float-right"><i
-                                                    class="fa fa-plus-square-o"></i>&nbsp;
+                                                <button type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="btn btn-sm btn-info btn-base float-right" onclick="change('addIcon')">
+                                                <i class="fa fa-plus-square-o"></i>&nbsp;
                                                 Add New
                                             </button>
                                             </h2>
@@ -255,7 +255,7 @@
                                         <table id="example" class="table table-striped table-bordered" style="width:100%">
                                             <thead>
                                                 <tr>
-                                                    <th>Name</th>
+                                                    <th>Item Name</th>
                                                     <th>Status</th>
                                                     <th width="80px">Action</th>
                                                 </tr>
@@ -617,7 +617,7 @@
                                             </tbody>
                                             <tfoot>
                                                 <tr>
-                                                    <th>Name</th>
+                                                    <th>Item Name</th>
                                                     <th>Status</th>
                                                     <th>Action</th>
                                                 </tr>
@@ -719,6 +719,15 @@
         $(document).ready(function() {
             $('#example').DataTable();
         });
+    </script>
+    <script>
+        function change(iconID) {
+            if (document.getElementById(iconID).className == "fa fa-chevron-circle-up") {
+                document.getElementById(iconID).className = "fa fa-chevron-circle-down";
+            } else {
+                document.getElementById(iconID).className = "fa fa-chevron-circle-up";
+            }
+        }
     </script>
 </body>
 
