--- a/site_management.html
+++ b/site_management.html
@@ -57,11 +57,11 @@
                 <li>
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-angle-right"></i> Site
 						Management</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <ul class="show list-unstyled" id="homeSubmenu">
                         <li>
                             <a href="add_new_site.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> Add New Site</a>
                         </li>
-                        <li>
+                        <li class="active">
                             <a href="site_management.html" style="text-decoration: none;"><i class="fa fa-angle-right"></i> View All Sites</a>
                         </li>
                     </ul>
@@ -82,7 +82,7 @@
         <!-- Page Content -->
         <div id="content">
             <!--Navbar Start-->
-           <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-default">
@@ -120,10 +120,10 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="login_form.html">
-                                <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
-                            </a>
-                        </li>
+                                <a class="nav-link" href="login_form.html">
+                                    <i class="fas fa-sign-in-alt" data-target="#loginPageModal"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
